1.20, java 17, now caching all warps